# ADS124S08

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: ctest.yml
Inc/: ADS124S08.hpp
Inc/Private/: ADS124S08_ID.hpp  ADS124S08_INPMUX.hpp  ADS124S08_REF.hpp  ADS124S08_SPI_Register_I.hpp  ADS124S08_STATUS.hpp  DATARATE.hpp  ID.hpp  INPMUX.hpp  PGA.hpp  REF.hpp  STATUS.hpp  SYS.hpp
Src/: ADS124S08.cpp  ADS124S08_ID.cpp  ADS124S08_INPMUX.cpp  DATARATE.cpp  INPMUX.cpp  PGA.cpp  REF.cpp  STATUS.cpp  SYS.cpp
Test/: ADS124S08.test.cpp  ADS124S08_ID.test.cpp  ADS124S08_INPMUX.test.cpp  ADS124S08_REF.test.cpp  ADS124S08_STATUS.test.cpp  DATARATE.test.cpp  ID.test.cpp  INPMUX.test.cpp  PGA.test.cpp  REF.test.cpp  STATUS.test.cpp  SYS.test.cpp
